# helloc

./: .clang-format  .clang-tidy  .editorconfig  .env  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  LICENSE  README.md  asan.supp  coverage.sh  create_image.sh  justfile  lsan.supp  start_container.sh  ubsan.supp  vcpkg.json  version.sh
.github/workflows/: ci.yml  clang-format-check.yml  docker-image.yml  valgrind.yml
cmake/: AddIfFlagCompiles.cmake  CCache.cmake  CompilerSettings.cmake  FindCriterion.cmake
doxygen/: header.html
doxygen-awesome-css/: README.md
examples/: CMakeLists.txt  game.c  malloc-tutorial.c  single-header-demo.c  single_header_demo.c  uppercase.c
games/: .clang-tidy  CMakeLists.txt  game.c
src/: CMakeLists.txt  helloc.c  helloc.h  main.c  malloc-tutorial.c  miguno.c  miguno.h
test/: CMakeLists.txt  criterion_tests.c  doctest_tests.cpp  unity_tests.c
tools/: coverage.sh  version.sh
tools/docker/: create_image.sh  start_container.sh
